devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: name_landing
    env: staging
  name: name_landing
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 80
  selector:
    app: name_landing
    env: staging 
  type: NodePort
